<resources>
    <string name="app_name">Polling App</string>
    <string name="firebase_auth_token">AIzaSyBcEqesAz7Qsq1Pb3Jkf6rnVZ95hCRW9eg</string>
    <string name="talks">Talks</string>
    <string name="moments">Moments</string>
    <string name="search">Search</string>
    <string name="learn">Learn</string>
    <string name="profile">Profile</string>
    <string name="minus">-</string>
    <string name="title">Title</string>
    <string name="sub_title">Sub Title</string>
    <string name="date">Date</string>
    <string name="app_and_games">App and Games</string>
    <string name="favorites">Favorites</string>
    <string name="notepad">Notepad</string>
    <string name="translate">Translate</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="_6">6\'\'</string>
    <string name="long_press_any_sentesnce_ot_translate_pronounce_or_mark_as_favorite">Long Press any sentesnce ot translate, pronounce, or mark as favorite</string>
</resources>
